<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/food_menu"
                android:icon="@drawable/ic_restaurant_menu"
                android:title="@string/Food_Menu"/>
        <item
                android:id="@+id/berevrage_Menu"
                android:icon="@drawable/ic_restaurant_menu"
                android:title="@string/Berevarge_Menu"/>


    </group>

    <item android:title="@string/Axum">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
