<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent">
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                       android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <ImageView
            android:layout_width="0dp"
            android:scaleType="centerCrop"
            android:layout_height="263dp" app:srcCompat="@drawable/photo2"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="85dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="176dp"
            app:layout_constraintTop_toTopOf="@+id/imageView2" app:layout_constraintHorizontal_bias="0.0"
            android:background="@color/backgroundtext"
    >
        <TextView
                android:text="@string/Axum"
                android:textColor="@android:color/white"
                android:textSize="22dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/address"
                android:textSize="15dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
    </LinearLayout>
    <TextView
            android:padding="10dp"
            android:textSize="13sp"
            android:text="@string/sample_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/ourmeals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"
            android:id="@+id/textView7" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
        <ImageView
                app:layout_constraintHorizontal_weight="1"
                android:layout_width="107dp"
                android:scaleType="centerCrop"
                android:layout_height="104dp" app:srcCompat="@drawable/photo1"
                android:id="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="20dp"/>
        <ImageView
                app:layout_constraintHorizontal_weight="1"
                android:layout_width="107dp"
                android:scaleType="centerCrop"
                android:layout_height="104dp" app:srcCompat="@drawable/photo10"
                android:id="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                android:layout_marginTop="16dp" android:layout_marginLeft="28dp" android:layout_marginStart="28dp"/>
        <ImageView
                app:layout_constraintHorizontal_weight="1"
                android:scaleType="centerCrop"
                android:layout_width="107dp"
                android:layout_height="104dp" app:srcCompat="@drawable/photo15"
                android:id="@+id/imageView5"
                app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="16dp"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.789"/>
        <ImageView
                android:scaleType="centerCrop"
                android:layout_width="107dp"
                android:layout_height="104dp" app:srcCompat="@drawable/photo4"
                android:id="@+id/imageView7" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
        <ImageView
                android:scaleType="centerCrop"
                android:layout_width="107dp"
                android:layout_height="104dp" app:srcCompat="@drawable/photo16"
                android:id="@+id/imageView8" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView4"
                app:layout_constraintStart_toEndOf="@+id/imageView7" android:layout_marginLeft="28dp"
                android:layout_marginStart="28dp"/>
        <ImageView
                android:scaleType="centerCrop"
                android:layout_width="107dp"
                android:layout_height="104dp" app:srcCompat="@drawable/photo14"
                android:id="@+id/imageView9" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView5"
                app:layout_constraintStart_toEndOf="@+id/imageView8" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintHorizontal_bias="0.733"/>


        <TextView
                android:text="@string/contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView11" android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/imageView8"
                android:layout_marginTop="28dp" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:id="@+id/textView9" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView11"/>
        <TextView
                android:text="@string/Address_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/address"
                android:layout_width="252dp"
                android:layout_height="22dp"
                android:id="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginTop="24dp"
                app:layout_constraintStart_toEndOf="@+id/textView10" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:id="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView10" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:text="@string/Phone_text"/>
        <TextView
                android:text="@string/Email_text"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:id="@+id/textView16" android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginTop="12dp"/>
        <TextView
                android:text="@string/Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView17"
                app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView15" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.182"
                android:layout_marginTop="8dp"/>
        <TextView
                android:text="@string/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textView17" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toEndOf="@+id/textView16" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.241"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
