<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".LaunchMenuDetail">

    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">

            <ImageView
                    android:contentDescription="@string/add_to_cart"
                    android:src="@drawable/photo1"
                    android:scaleType="centerCrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:layout_width="356dp"
                    android:layout_height="32dp"
                    android:id="@+id/price_detail_activity"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_goneMarginRight="20dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.279"
                    android:text="$ 55.66" app:layout_constraintTop_toBottomOf="@+id/name_detial_activity"/>
            <Button
                    android:text="@string/add_to_cart"
                    android:background="@color/backgroundtext"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:layout_margin="20dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/addtocart_button"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView22"/>
            <TextView
                    android:text="@string/menu_detail"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView19"
                    app:layout_constraintTop_toBottomOf="@+id/price_detail_activity" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary"
                    android:id="@+id/textView20" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView19" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"/>
            <TextView
                    android:text="@string/food_description"
                    android:layout_width="0dp"
                    android:textStyle="italic"
                    android:textSize="12sp"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView21"
                    app:layout_constraintTop_toBottomOf="@+id/textView20" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_marginTop="12dp"/>
            <TextView
                    android:text="@string/sample_text"
                    android:layout_width="394dp"
                    android:layout_height="124dp"
                    android:id="@+id/textView22"
                    android:padding="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView21" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_marginTop="12dp"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:ems="10"
                    android:id="@+id/name_detial_activity" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView6" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>